src/app/globals.css
@import "tailwindcss";

html, body {
  background: transparent !important;
  margin: 0;
  padding: 0;
  min-height: 100%;
  overflow: hidden;
}

* {
  cursor: none;
}

::selection {
  background-color: black;
  color: white;
}

::-moz-selection {
  background-color: black;
  color: white;
}

html.dark ::selection {
  background-color: white;
  color: black;
}

html.dark ::-moz-selection {
  background-color: white;
  color: black;
}

@keyframes loading-bar {
  0% { transform: translateX(-100%); }
  100% { transform: translateX(0%); }
}

.animate-loading-bar {
  animation: loading-bar 200ms ease-out forwards;
}

.fade-enter {
  opacity: 0;
  animation: fadeIn 0.7s ease forwards;
}

@keyframes fadeIn {
  to {
    opacity: 1;
  }
}


/* to debug background bleeding issues */
* {
  background-clip: content-box;
}

html { background: red; }
body { background: blue; }
main { background: green; }
section { background: yellow; }

